# RequestForward

./: .eslintrc.cjs  README.md  api.py  config.ini  config_manager.py  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  main.py  models.py  package.bat  package.json  pnpm-lock.yaml  pyproject.toml  setting.py  test.py  utils.py
config/: config.yml
models/: base.py
proxy/: base.py
src/main/: config.ts  env.d.ts  function.ts  index.ts  window.ts
src/main/models/: base.ts  database.ts  group.ts  service.ts
src/main/service/: proxy.ts
src/main/utils/: logger.ts  request.ts  string.ts
src/renderer/: components.d.ts
src/renderer/src/: App.vue  env.d.ts
src/renderer/src/assets/: base.css  main copy.css
src/renderer/src/assets/styles/: base.css
src/renderer/src/components/GroupPage/: GroupPage.vue
src/renderer/src/components/GroupPage/CreateGroupDialog/: CreateGroupDialog.vue
src/renderer/src/components/MenuTag/: MenuTag.vue
src/renderer/src/components/QuestionTooltip/: QuestionTooltip.vue
src/renderer/src/components/TextAvatar/: TextAvatar.vue
src/renderer/src/services/: group.ts  service.ts
ui/: custom_tab.py  main_window.py  settings_dialog.py  tab_content.py
utils/: base.py  config.py  settings.py
